# Games101_Assignment

./: .gitignore  CMakeLists.txt
Assignment0/: CMakeLists.txt  homework.cpp  main.cpp
Assignment1/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp
Assignment2/: global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/: main.cpp
Assignment5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment7/: Triangle.hpp
